changed the correct branch for the workflow

--- a/.github/workflows/heroku-deploy.yml
+++ b/.github/workflows/heroku-deploy.yml
@@ -2,8 +2,8 @@ name: Pre-deployment Checks
 
 on:
   push:
-    branches: ["main", "development"]
-  pull_request:
+    branches:
+      - heroku
 
 jobs:
   precheck:
